2008-01-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* include/mailutils/cfg.h (mu_offsetof): Move mu_offsetof to
	types.hin.
	* include/mailutils/types.hin (mu_offsetof): New macro.
	* mailbox/acl.c (MU_S_UN_NAME): New macro.
	(debug_sockaddr, mu_sockaddr_to_str, _acl_match)
	(_run_entry): Take into account salen for AF_UNIX.

2008-01-14  Sergey Poznyakoff  <gray@gnu.org.ua>

	* include/mailutils/gocs.h (log_facility): Remove.
	* include/mailutils/syslog.h (mu_log_facility, mu_log_tag): New
	declarations.
	(MU_LOG_TAG): New define.
	* mailbox/gocs.c (mu_gocs_logging_init): Set mu_log_tag.
	* mailbox/syslog.c (mu_log_facility, mu_log_tag): New variables.
	* libcfg/common.c (mu_logging_param): New statement `tag'. 
	* comsat/comsat.c, imap4d/imap4d.c, imap4d/login.c,
	maidag/maidag.c, mail.local/main.c, pop3d/pop3d.c, pop3d/user.c,
	sieve/sieve.c: Use MU_LOG_TAG in openlog, and
	program_version in mu_m_server_create calls.

	* libsieve/conf.c (mu_sieve_module_init): Remove initial call to
	_path_append.
	* libsieve/load.c (sieve_init_load_path): New function.
	(load_module,sieve_load_add_path,sieve_load_add_dir): Call
	sieve_init_load_path.
	* mail.local/main.c (parse_opt): Bugfix. Translate -S option to
	sieve-filter configuration statement.

2008-01-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix NLS issues.
	
	* configure.ac: Define DEFAULT_TEXT_DOMAIN
	* comsat/comsat.c, dotlock/dotlock.c, frm/frm.c, frm/from.c,
	guimb/main.c, imap4d/imap4d.c, maidag/maidag.c, mail/mail.c,
	mail.local/main.c, mail.remote/mail.remote.c, messages/messages.c,
	mh/ali.c, mh/anno.c, mh/burst.c, mh/comp.c, mh/fmtcheck.c,
	mh/folder.c, mh/forw.c, mh/inc.c, mh/install-mh.c, mh/mark.c,
	mh/mhl.c, mh/mhn.c, mh/mhparam.c, mh/mhpath.c, mh/pick.c,
	mh/refile.c, mh/repl.c, mh/rmf.c, mh/rmm.c, mh/scan.c, mh/send.c,
	mh/sortm.c, mh/whatnow.c, mh/whom.c, mimeview/mimeview.c,
	movemail/movemail.c, pop3d/pop3d.c, pop3d/popauth.c,
	readmsg/readmsg.c, sieve/sieve.c, 